Fix some inspections